# cargo-credential-pass

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
src/: main.rs
src/pass/: keychain.rs  mod.rs  path.rs
tests/: integration.rs
tests/common/: gpg.rs  mod.rs  pass.rs
