[package]
name = "cargo-credential-pass"
description = "Keep your cargo registry tokens encrypted in your pass store"
authors = ["Dom Dwyer <dom@itsallbroken.com>"]
version = "1.0.0"
edition = "2021"

license = "Apache-2.0"
repository = "https://github.com/domodwyer/cargo-credential-pass"
keywords = ["cargo", "credential", "pass"]
categories = ["development-tools::cargo-plugins"]
exclude = [".github"]

[dependencies]
cargo-credential = "0.4.6"
thiserror = "2.0.3"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.14.0"
