[package]
name = "cargo-credential-pass"
description = "Keep your cargo registry tokens encrypted in your pass store"
authors = ["Dom Dwyer <dom@itsallbroken.com>"]
version = "1.1.0"
edition = "2021"

license = "Apache-2.0"
repository = "https://github.com/domodwyer/cargo-credential-pass"
keywords = ["cargo", "credential", "pass"]
categories = ["development-tools::cargo-plugins"]
exclude = [".github"]

[dependencies]
cargo-credential = "0.4.8"
thiserror = "2.0.14"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.21.0"
